# goit-pythonweb-hw-10

./: README.md  pyproject.toml  requirements.txt
migrations/versions/: b08084a75341_initial_migration.py
src/: schemas.py
src/api/: contacts.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/services/: contacts.py
